[gd_scene load_steps=16 format=3 uid="uid://dekjyfsmafh8k"]

[ext_resource type="Shader" uid="uid://cm0a5kd1avm50" path="res://Shaders/bubble.gdshader" id="1_14tpb"]
[ext_resource type="Texture2D" uid="uid://qmeykmwuuucb" path="res://Sprites/worm.png" id="2_affe2"]
[ext_resource type="Script" uid="uid://bdmescwjq652r" path="res://Objects/worm.gd" id="2_rs7oq"]
[ext_resource type="AudioStream" uid="uid://eu7r75ryhiel" path="res://Sounds/wormsfx.ogg" id="4_77qcx"]
[ext_resource type="Material" uid="uid://c1y6pcmembpvq" path="res://Particles/bubble_particle.tres" id="5_j5b4d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_affe2"]
radius = 1.11926

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jhcq3"]
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rs7oq"]
render_priority = 0
shader = ExtResource("1_14tpb")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_jhcq3")
shader_parameter/bubble_color = Color(0.0470588, 0.52549, 0.4, 1)
shader_parameter/height_multiplier = 0.3
shader_parameter/noise_sample_size = 0.5
shader_parameter/animation_speed = 0.1

[sub_resource type="SphereMesh" id="SphereMesh_jxdlp"]
material = SubResource("ShaderMaterial_rs7oq")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j5b4d"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_77qcx")

[sub_resource type="Animation" id="Animation_j5b4d"]
resource_name = "Collected"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../wormsprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -12.5664, 0), Vector3(0, 12.5664, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../wormsprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(0.5, 2.07053, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.237, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../OmniLight3D:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../wormsprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.15, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.723063, 0.817194, 1), Vector3(0.103, 0.116, 0.142)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../wormsprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%CPUParticles3D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.13),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ppvjl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../wormsprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../wormsprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../OmniLight3D:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.146]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../wormsprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.723063, 0.817194, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../wormsprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%CPUParticles3D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5b4d"]
_data = {
&"Collected": SubResource("Animation_j5b4d"),
&"RESET": SubResource("Animation_ppvjl")
}

[sub_resource type="SphereMesh" id="SphereMesh_ppvjl"]
material = ExtResource("5_j5b4d")

[sub_resource type="Curve" id="Curve_j5b4d"]
_data = [Vector2(0.00404859, 1), 0.0, 0.0, 0, 0, Vector2(0.607287, 0.798276), 0.0, 0.0, 0, 0, Vector2(0.967611, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Worm" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_rs7oq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_affe2")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
layers = 3
light_color = Color(0.286275, 0.698039, 0.262745, 1)
light_energy = 4.146

[node name="wormBubble" type="MeshInstance3D" parent="."]
layers = 3
mesh = SubResource("SphereMesh_jxdlp")

[node name="wormsprite" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.723063, 0, 0, 0, 0.817194, 0, 0, 0, 1, 0, 0, 0)
layers = 3
texture = ExtResource("2_affe2")

[node name="WormSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_j5b4d")
volume_db = 9.973

[node name="WormAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../wormBubble")
libraries = {
&"": SubResource("AnimationLibrary_j5b4d")
}

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.0111516, -0.464825, -0.000243664)
emitting = false
amount = 25
explosiveness = 1.0
mesh = SubResource("SphereMesh_ppvjl")
spread = 180.0
flatness = 0.31
gravity = Vector3(0, 9, 0)
initial_velocity_min = 7.35
initial_velocity_max = 7.35
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_j5b4d")
hue_variation_min = 1.0
hue_variation_max = 1.0

[connection signal="body_entered" from="." to="." method="_on_area_3d_body_entered"]
